--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-streamlit
-yfinance
-pandas
-plotly
+fastapi==0.104.1
+uvicorn==0.24.0
+streamlit==1.28.1
+pandas==2.1.1
+numpy==1.26.1
+plotly==5.18.0
+requests==2.31.0
+python-dotenv==1.0.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+pydantic==2.5.0
